<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/Dateid" android:title="@string/date_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/keyid" android:title="@string/key_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/listid" android:title="@string/list_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/itemid1" android:title="@string/actionitem1"
        android:orderInCategory="0" app:showAsAction="ifRoom|withText" />




</menu>
