<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rohan.assigntwo.DateActivity">


    <TextView
        android:id="@+id/displayDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/DisplayText"
        android:textSize="30sp"
        android:layout_below="@+id/confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <Button android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PickButton"
        android:layout_below="@+id/datePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/confirm"
        android:layout_alignEnd="@+id/confirm" />

    <Button android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmButton"
        android:layout_below="@+id/pickDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_alignTop="@+id/datePicker"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
